# corpo-mcp

./: Dockerfile  LICENSE  README.md  __init__.py  __main__.py  corpo_mcp.py  llms-install.md  pyproject.toml  server.json
scripts/: form-entity.sh
